[package]
name = "ont_demult"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~3.1", features = ["cargo"]}
anyhow = "~1.0"
compress_io = { git = "https://github.com/heathsc/compress_io.git" }