[package]
name = "ont_demult"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "~0.4"
stderrlog = "~0.6"
clap = {version = "~4", features = ["cargo"]}
anyhow = "~1.0"
compress_io = "~0.6"
